[Add] Made a project page, fixed margins of about page photo, added more spacing and other fixes

--- a/HTML and CSS/Jamoo.css
+++ b/HTML and CSS/Jamoo.css
@@ -26,39 +26,24 @@ body {
     color: #191919;
     font-weight: bold;
   }
-
-/* .head h1 {
+  
+  .head h1 {
     text-align: center;
     margin: auto;
-    width: 100%;
     padding: 20px;
     font-size: 26px;
-  } */
+  }
   
   .head p {
     text-align: center;
     margin: auto;
-    width: 100%;
     padding: 20px;
     position: relative;
     top: -25px;
     font-size: 14px;
     color: #999;
   }
-
-.about-photo {
+  
+  .box-wrapper {
     text-align: center;
-    position: relative;
-    bottom: -10px;
-}
-
-.about p {
-    text-align: center;
-    margin: auto;
-    color: #A9A9A9; 
-    font-size: 14px;
-    font-weight: lighter;
-    line-height: 19px;
-    position: relative;
-    top: 10px;
-}
+  }
